# blitzmax-geany-plugin

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac
blitzmax/: Makefile.am  README
blitzmax/src/: Makefile.am  blitzmax.c  blitzmax.h
po/: POTFILES.in
